--- a/.github/exit0test.yml
+++ b/.github/exit0test.yml
@@ -7,7 +7,10 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os:
+          - windows-latest
+          - macos-latest
+          - ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
